Increase container width to avoid overflow in the instructions

--- a/public/style.styl
+++ b/public/style.styl
@@ -31,7 +31,7 @@ a
 
 #container
   position relative
-  width 500px
+  width 650px
   margin 0 auto
 
 #content
@@ -69,7 +69,7 @@ h1
     font-size: 12px;
 
 form
-  width 480px
+  width 580px
   margin 0 auto 10px
   position relative
 
@@ -80,7 +80,7 @@ form
   input
     display inline-block
 
-    width 340px
+    width 440px
     padding 6px 10px 8px
 
     font-size 14px
@@ -167,7 +167,7 @@ form
       font-size 18px
       font-weight: 300
       text-align: center
-      margin: 20px 0 5px
+      margin: 20px 0
       text-decoration underline
 
     pre
